# bravora-game-manager

./: .clang-format  CMakeLists.txt  LICENSE  asset.cpp  asset.h  assetservice.cpp  assetservice.h  backendpage.cpp  backendpage.h  backendpage.ui  funresources.qrc  gameartpage.cpp  gameartpage.h  gameartpage.ui  goal.cpp  goal.h  goalpriority.h  goalservice.cpp  goalservice.h  homepage.cpp  homepage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  productmanagementpage.cpp  productmanagementpage.h  productmanagementpage.ui  programmingpage.cpp  programmingpage.h  programmingpage.ui  task.cpp  task.h  taskcategory.h  taskservice.cpp  taskservice.h  tasktype.h
